// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubHeading should render as H2 element, when passed "h2" for the element prop 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  margin-bottom: 12px;
  font-size: 12px;
  line-height: 20px;
}

<h2
  class=" circuit-0 circuit-1"
>
  H2 heading
</h2>
`;

exports[`SubHeading should render as H3 element, when passed "h3" for the element prop 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  margin-bottom: 12px;
  font-size: 12px;
  line-height: 20px;
}

<h3
  class=" circuit-0 circuit-1"
>
  H3 heading
</h3>
`;

exports[`SubHeading should render as H4 element, when passed "h4" for the element prop 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  margin-bottom: 12px;
  font-size: 12px;
  line-height: 20px;
}

<h4
  class=" circuit-0 circuit-1"
>
  H4 heading
</h4>
`;

exports[`SubHeading should render as H5 element, when passed "h5" for the element prop 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  margin-bottom: 12px;
  font-size: 12px;
  line-height: 20px;
}

<h5
  class=" circuit-0 circuit-1"
>
  H5 heading
</h5>
`;

exports[`SubHeading should render as H6 element, when passed "h6" for the element prop 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  margin-bottom: 12px;
  font-size: 12px;
  line-height: 20px;
}

<h6
  class=" circuit-0 circuit-1"
>
  H6 heading
</h6>
`;

exports[`SubHeading should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  margin-bottom: 12px;
  font-size: 12px;
  line-height: 20px;
  margin-bottom: 0;
}

<h3
  class=" circuit-0 circuit-1"
/>
`;

exports[`SubHeading should render with size kilo, when passed "kilo" for the size prop 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  margin-bottom: 12px;
  font-size: 12px;
  line-height: 20px;
}

<h3
  class=" circuit-0 circuit-1"
>
  kilo heading
</h3>
`;

exports[`SubHeading should render with size mega, when passed "mega" for the size prop 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  margin-bottom: 12px;
  font-size: 14px;
  line-height: 18px;
}

<h3
  class=" circuit-0 circuit-1"
>
  mega heading
</h3>
`;
